Fix text cut off

--- a/resources/styles.css
+++ b/resources/styles.css
@@ -6,10 +6,12 @@ svg {
   font-family: Seville-Book;
   font-size: 120;
   fill: #F80070;
+  text-length: 4;
 }
 
 .updated {
   font-family: Seville-Book;
   font-size: 64;
   fill: #ffffff;
+  text-length: 12;
 }
